--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             OpenClassrooms.
           </p>
           <p>
-            Aujourd'hui, à 26ans je m'invest à fond dans le métier de
+            Aujourd'hui, à 26ans je m'investis à fond dans le métier de
             développeur web.
           </p>
         </div>
