--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
             developpement.
           </p>
           <p>
-            Pour ma reconversion je me suis fais financer ma formation par via
-            des aides gouvernementales pour suivre ma formation chez
-            OpenClassrooms.
+            Pour ma reconversion je me suis fais financer ma formation via des
+            aides gouvernementales pour suivre ma formation chez OpenClassrooms.
           </p>
           <p>
             Aujourd'hui, à 26ans je m'investis à fond dans le métier de
