Modif numéro de tel

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="contact">
           <h2 class="uppercase">Contact</h2>
           <p>Adresse<br />1 rue Dupuy Crouzet</p>
-          <p>Téléphone<br />06 06 06 06 06</p>
+          <p>Téléphone<br />06 01090909</p>
           <p>Email<br />contact@gmail.com</p>
           <p>
             Linkedin<br /><a
